--- a/src/app/components/atoms/list/list.component.html
+++ b/src/app/components/atoms/list/list.component.html
@@ -10,7 +10,11 @@
       <td mat-cell *matCellDef="let row">{{ row.getFormControl(column)?.value }}</td>
     </ng-container>
   }
-  <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
+  <tr
+    mat-header-row
+    *matHeaderRowDef="columns; sticky: true"
+    appTap
+    (hold)="holdHeader.emit()"></tr>
   <tr
     mat-row
     *matRowDef="let row; columns: columns"
