--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -6,5 +6,5 @@
   (hold)="hold.emit(tap)"
   (touch)="touch.emit(tap)">
   <mat-icon>{{ tap.data('Icon') }}</mat-icon>
-  <ng-content select="[before-tap-name]"></ng-content>{{ tap.cursor }}
+  {{ tap.cursor }}
 </button>
