--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -1,16 +1,19 @@
-@if (bs.ls.$list(); as list) {
-  @if (modifyColumns$ | async) {
-    <app-modifier modify="columns" />
-  } @else if (Modifier) {
-    <app-modifier [rows]="bs.ls.$rows()" (deleteRow)="bs.ls.removeRow($event)" />
-  } @else {
-    <app-list
-      [rows]="bs.ls.$rows()"
-      [columns]="bs.ls.$columns[list.cursor]()"
-      [dataSource]="list.list()"
-      (hold)="bs.ls.holdRow(list)"
-      (touch)="rowTouched($event)"
-      (holdHeader)="bs.ls.addColumn()"
-      (columnsChanged)="columnsChanged($event)" />
+@if (ls.$list(); as list) {
+  @if (Modifier) {
+    <app-rows-modifier [rows]="ls.$rows()" />
+  }
+  @if (!Modifier) {
+    @if (Lists === 'Home') {
+      <app-modifier [fractals]="fs.root.list()" />
+    } @else {
+      <app-list
+        [rows]="ls.$rows()"
+        [columns]="ls.$columns[list.cursor]()"
+        [dataSource]="list.list()"
+        (hold)="ls.holdRow(list)"
+        (touch)="rowTouched($event)"
+        (holdHeader)="ls.editColumn()"
+        (columnsChanged)="columnsChanged($event)" />
+    }
   }
 }
