--- a/src/app/components/atoms/list/list.component.html
+++ b/src/app/components/atoms/list/list.component.html
@@ -1,20 +1,11 @@
-<table
-  mat-table
-  [dataSource]="dataSource"
-  cdkDropList
-  cdkDropListOrientation="horizontal"
-  (cdkDropListDropped)="columnsChanged.emit($event)">
+<table mat-table [dataSource]="dataSource">
   @for (column of columns; track $index) {
     <ng-container [matColumnDef]="column">
-      <th mat-header-cell cdkDrag *matHeaderCellDef>{{ column }}</th>
+      <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">{{ row.getFormControl(column)?.value }}</td>
     </ng-container>
   }
-  <tr
-    mat-header-row
-    *matHeaderRowDef="columns; sticky: true"
-    appTap
-    (hold)="holdHeader.emit()"></tr>
+  <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
   <tr
     mat-row
     *matRowDef="let row; columns: columns"
