updade fractal.utils and save delete mechanism

--- a/src/app/components/organisms/app-modifier/app-modifier.component.html
+++ b/src/app/components/organisms/app-modifier/app-modifier.component.html
@@ -9,7 +9,7 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <app-form-card [fractal]="fractal" />
-        <app-modifier [fractals]="fractal.list()" />
+        <app-modifier [fractals]="fractal.list" />
       </mat-expansion-panel>
     }
   }
