--- a/src/app/components/atoms/list/list.component.html
+++ b/src/app/components/atoms/list/list.component.html
@@ -1,8 +1,10 @@
 <table mat-table [dataSource]="dataSource">
-  @for (column of columns; track $index) {
+  @for (column of columns; track column) {
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let row">{{ row.getFormControl(column)?.value }}</td>
+      <td mat-cell *matCellDef="let row; let i = index">
+        {{ row.getFormControl(column)?.value }}
+      </td>
     </ng-container>
   }
   <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
