--- a/src/app/components/organisms/page/page.component.html
+++ b/src/app/components/organisms/page/page.component.html
@@ -4,12 +4,12 @@
   }
   @if (!Modifier) {
     @if (Lists === 'Home') {
-      <app-modifier [fractals]="fs.root.list()" />
+      <app-modifier [fractals]="fs.root.list" />
     } @else {
       <app-list
         [rows]="rs.$rows()"
-        [columns]="list.columns()"
-        [dataSource]="list.list()"
+        [columns]="list.columns"
+        [dataSource]="ls.$list()?.list || []"
         (hold)="rs.hold(list)"
         (touch)="rowTouched($event)" />
     }
