--- a/src/app/components/organisms/rows-modifier/rows-modifier.component.html
+++ b/src/app/components/organisms/rows-modifier/rows-modifier.component.html
@@ -8,7 +8,9 @@
         <mat-card-header>
           <mat-card-title-group>
             <button top type="button" mat-flat-button (click)="rs.delete(row)">Cancel</button>
-            <mat-card-title>{{ row.data('Position') }}</mat-card-title>
+            <mat-card-title>{{
+              row.status === 'New' ? 'New' : row.data('Position')
+            }}</mat-card-title>
             <mat-card-subtitle class="subtitle" [class]="subtitle()">{{
               subtitle()
             }}</mat-card-subtitle>
