--- a/src/app/components/atoms/list/list.component.html
+++ b/src/app/components/atoms/list/list.component.html
@@ -2,7 +2,7 @@
   @for (column of columns; track column) {
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
-      <td mat-cell *matCellDef="let row; let i = index">
+      <td mat-cell *matCellDef="let row">
         {{ row.getFormControl(column)?.value }}
       </td>
     </ng-container>
