--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,6 +9,7 @@ $color-danger: #dc3545;
 $color-warning: #ffc107;
 $color-secondary: #f5f5f5;
 $color-manager: #ff4081;
+$color-border: #e0e0e0;
 
 $toolbar-height: $size-large * 3;
 $toolbar-tap-width: 40px;
