--- a/src/app/components/organisms/app-modifier/expansion-panel/expansion-panel.component.html
+++ b/src/app/components/organisms/app-modifier/expansion-panel/expansion-panel.component.html
@@ -11,13 +11,45 @@
     >
   </mat-expansion-panel-header>
   <div class="children">
-    <mat-card appearance="outlined">
-      <mat-card-content>
-        <app-form [fractal]="fractal" />
-      </mat-card-content>
-    </mat-card>
-    @if (fractal.fractals) {
-      <ng-content />
-    }
+    <div class="table-wrapper">
+      <table class="table" mat-table [dataSource]="fractal.controlsList">
+        @for (column of columns; track column) {
+          <ng-container [matColumnDef]="column">
+            <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
+            <td mat-cell *matCellDef="let control">{{ control[column] }}</td>
+          </ng-container>
+        }
+        <tr mat-header-row *matHeaderRowDef="columns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let control; columns: columns"></tr>
+      </table>
+    </div>
+    <ng-content />
   </div>
 </mat-expansion-panel>
+
+<!-- <mat-expansion-panel
+  [ngClass]="this.ams.$current() === fractal ? 'active' : ''"
+  (afterExpand)="afterExpand(fractal)"
+  (afterCollapse)="afterCollapse(fractal)">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      @if (fractal.data('Icon'); as icon) {
+        <mat-icon class="icon">{{ icon }}</mat-icon>
+      }
+      {{ fractal.cursor }}</mat-panel-title
+    >
+  </mat-expansion-panel-header>
+  <div class="children">
+    <mat-table class="table" [dataSource]="fractal.controlsList">
+      @for (column of columns; track column) {
+        <ng-container [matColumnDef]="column">
+          <mat-header-cell *matHeaderCellDef>{{ column }}</mat-header-cell>
+          <mat-cell *matCellDef="let control">{{ control[column] }}</mat-cell>
+        </ng-container>
+      }
+      <mat-header-row *matHeaderRowDef="columns; sticky: true" />
+      <mat-row *matRowDef="let row; columns: columns" />
+    </mat-table>
+    <ng-content />
+  </div>
+</mat-expansion-panel> -->
