--- a/src/app/components/organisms/app-modifier/app-modifier.component.html
+++ b/src/app/components/organisms/app-modifier/app-modifier.component.html
@@ -1,7 +1,9 @@
 <app-expansion-panel [fractal]="fractal">
   <mat-accordion>
-    @for (fractal of fractal.list; track $index) {
-      <app-modifier [fractal]="fractal" />
+    @for (fractal of fractal.list; track fractal.dto.id) {
+      @if (shouldRenderLevel(fractal)) {
+        <app-modifier [fractal]="fractal" />
+      }
     }
   </mat-accordion>
 </app-expansion-panel>
