delete form controls from fractals

--- a/src/app/components/atoms/form/form.component.html
+++ b/src/app/components/atoms/form/form.component.html
@@ -1,16 +1,16 @@
-<form [formGroup]="fractal.formRecord">
+<form [formGroup]="formRecord">
   @for (name of names; track name) {
     <mat-form-field class="form-field">
       <mat-label i18n>{{ name }}</mat-label>
       <input #inputElementRef [type]="name" matInput formControlName="{{ name }}" />
-      @if (inputElementRef.value && !fractal.formRecord.get(name)?.disabled) {
+      @if (inputElementRef.value && !formRecord.get(name)?.disabled) {
         <button
           type="button"
           matSuffix
           mat-icon-button
           i18n-aria-label
           aria-label="Clear input"
-          (click)="fractal.formRecord.get(name)?.setValue('')">
+          (click)="formRecord.get(name)?.setValue('')">
           <mat-icon>close</mat-icon>
         </button>
       }
