--- a/src/app/components/molecules/edit/edit.component.html
+++ b/src/app/components/molecules/edit/edit.component.html
@@ -1,1 +1,1 @@
-<app-tap [tap]="tap" (touch)="editTouched($event)" [disabled]="disabled()" />
+<app-tap [tap]="tap" (touch)="editTouched($event)" />
