--- a/src/app/components/organisms/app-modifier/app-modifier.component.html
+++ b/src/app/components/organisms/app-modifier/app-modifier.component.html
@@ -1,4 +1,4 @@
-<app-expansion-panel [fractal]="fractal">
+<app-expansion-panel [fractal]="fractal" (closed)="closed()">
   <mat-accordion>
     @for (fractal of fractal.list; track fractal.dto.id) {
       @if (shouldRenderLevel(fractal)) {
