--- a/src/app/components/atoms/collection/collection.component.html
+++ b/src/app/components/atoms/collection/collection.component.html
@@ -3,7 +3,9 @@
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
-        {{ row.getFormControl(column)?.value }}
+        @if (isControl(row)) {
+          {{ column === 'indicator' ? row.indicator : row.data }}
+        }
       </td>
     </ng-container>
   }
