--- a/src/app/components/atoms/spinner/spinner.component.html
+++ b/src/app/components/atoms/spinner/spinner.component.html
@@ -1,9 +1,5 @@
 @if (mode === 'indeterminate') {
   <mat-progress-spinner [mode]="mode" [diameter]="diameter" [strokeWidth]="strokeWidth" />
 } @else {
-  <mat-progress-spinner
-    [mode]="mode"
-    [value]="timeout$ | async"
-    [diameter]="diameter"
-    [strokeWidth]="strokeWidth" />
+  <mat-progress-spinner [mode]="mode" [value]="timeout$ | async" [diameter]="diameter" [strokeWidth]="strokeWidth" />
 }
