--- a/src/app/components/atoms/tap/tap.component.html
+++ b/src/app/components/atoms/tap/tap.component.html
@@ -1,10 +1,4 @@
-<button
-  mat-flat-button
-  appTap
-  [tap]="tap"
-  [disabled]="disabled"
-  (hold)="hold.emit(tap)"
-  (touch)="touch.emit(tap)">
+<button mat-flat-button appTap [tap]="tap" (hold)="hold.emit(tap)" (touch)="touch.emit(tap)">
   <mat-icon>{{ tap.data('Icon') }}</mat-icon>
   {{ tap.cursor }}
 </button>
