--- a/src/app/components/molecules/delete/delete.component.html
+++ b/src/app/components/molecules/delete/delete.component.html
@@ -1,5 +1,1 @@
-<app-tap
-  [tap]="tap"
-  [disabled]="rs.$currents().length === 0"
-  (hold)="deleteHeld()"
-  (touch)="deleteTouched($event)" />
+<app-tap [tap]="tap" (hold)="deleteHeld()" (touch)="deleteTouched($event)" />
