--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -1,5 +1,5 @@
 @if (rts.$current(); as root) {
-  <app-modifier [fractal]="root" />
+  <app-control-panel [fractal]="root" />
   <!-- @if (cs.$current(); as collection) {
     @if (Modifier) {
       <app-rows-modifier [rows]="rs.$currents()" />
