--- a/src/app/components/molecules/manager/manager.component.html
+++ b/src/app/components/molecules/manager/manager.component.html
@@ -1,4 +1,4 @@
-<button mat-mini-fab appTap (hold)="holdAndRTouch('Hold')" (touch)="holdAndRTouch('Touch')">
+<button mat-mini-fab appTap (hold)="holdAndTouch('Hold')" (touch)="holdAndTouch('Touch')">
   @if (showSpinner$ | async) {
     <app-spinner class="manager-spinner" mode="determinate" />
   }
