--- a/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.scss
+++ b/src/app/components/organisms/control-panel/expansion-panel/expansion-panel.component.scss
@@ -10,12 +10,6 @@
   gap: $size-medium;
 }
 
-.table {
-  border: solid 1px $color-border;
-  width: 100%;
-  overflow: auto;
-}
-
 .mat-expansion-panel {
   border: solid 1px $color-border;
   box-shadow: none !important;
@@ -24,10 +18,6 @@
 
 .mat-expansion-panel.active {
   background-color: $color-secondary;
-}
-
-.table-wrapper {
-  overflow: auto;
 }
 
 ::ng-deep {
@@ -49,11 +39,6 @@
   }
 }
 
-.new-panel {
-  border: none;
-}
-
-.subtitle {
-  margin-bottom: $size-extra-small;
-  color: $color-success;
+.collection {
+  border: solid 1px $color-border;
 }
