--- a/src/app/components/organisms/screen/screen.component.html
+++ b/src/app/components/organisms/screen/screen.component.html
@@ -12,11 +12,7 @@
           <app-control-panel [fractal]="root" />
         }
         @default {
-          <app-collection
-            [rows]="us.$currents()"
-            [columns]="collection.columns"
-            [dataSource]="collection.list"
-            (hold)="rowHeld(collection)" />
+          <app-collection [rows]="us.$currents()" [fractal]="collection" />
         }
       }
     }
