--- a/src/app/components/atoms/collection/collection.component.html
+++ b/src/app/components/atoms/collection/collection.component.html
@@ -3,10 +3,9 @@
     <ng-container [matColumnDef]="column">
       <th mat-header-cell *matHeaderCellDef>{{ column }}</th>
       <td mat-cell *matCellDef="let row">
-        @if (like === 'fractals') {
+        @if (isFractalCollection) {
           {{ row.data(column) }}
-        }
-        @if (like === 'controls') {
+        } @else {
           {{ column === 'indicator' ? row.indicator : row.data }}
         }
       </td>
@@ -17,7 +16,7 @@
     mat-row
     *matRowDef="let row; columns: columns"
     appTap
-    (hold)="hold.emit(row)"
-    (touch)="touch.emit(row)"
-    [class.row-is-clicked]="rows.includes(row)"></tr>
+    (hold)="onHold(isFractalCollection ? row : fractal)"
+    (touch)="onTouch(isFractalCollection ? row : fractal)"
+    [class.row-is-clicked]="rowIsClicked(row)"></tr>
 </table>
